<resources>
    <string name="app_name">Pixelify</string>
    <string name="app_slogan">Turn your screen into Pixel as you want</string>
    <string name="splash_greetings">Welcome to Pixelify!</string>
    <string name="startup_first_text">Let\'s complete some steps before using Pixelify. Use ADB to allow the special permissions needed. Don\'t worry, We will not do anything other than the main function in the Pixelify App. <a href="https://github.com/DitzDev/pixelify">Click here to learn more about Pixelify.</a>\n\nPaste this command to your ADB Terminal:</string>
    <string name="startup_waiting_text">Waiting for permission…</string>
    <string name="startup_hi_there">Hi There!</string>
    <string name="startup_menu_helper_adb">What\'s is ADB?</string>
    <string name="startup_copy_toast">Copied to clipboard.</string>
    <string name="more_options">More options</string>
    <string name="string_settings">\tSettings</string>
    <string name="btn_save_change">Save change</string>
    <string name="btn_reset">Reset to default</string>
    <string name="export_log">Export Log</string>
    <string name="apply_resolution">Apply Resolution</string>
    <string name="log_app">Log App</string>
    <string name="reset_resolution">Reset Resolution</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="appearrance">Appearrance</string>
    <string name="ui_mode">UI Mode</string>
    <string name="subtitle_ui_mode">Set the application theme according to your preference</string>
    <string name="application_settings">Application Settings</string>
    <string name="smart_alerts">Smart Alerts</string>
    <string name="subtitle_smart_alerts">The application will tell you the resolutions that are harmful to your system.</string>
    <string name="logging">Logging</string>
    <string name="subtitle_logging">This will be useful to inform the Application process.</string>
    <string name="about_app">\tAbout App</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system">Follow System</string>
    <string name="select_theme">Select Theme</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="string_dialog_warning">The resolution you\'ve chosen is significantly different from your device\'s default.\n\nThis might cause system instability or UI issues.\n\nCurrent Default: %1$sx%2$s\nNew Resolution: %3$sx%4$s @ %5$sdpi\n\nAre you sure you want to proceed?</string>
    <string name="warning">Warning</string>
    <string name="continue_anyway">Continue Anyway</string>

    <string name="about_activity_title">About the App</string>

    <string name="about_app_title">About the App</string>
    <string name="about_app_description">Pixelify is an application that allows users to freely adjust the default screen resolution of their device without the need to ROOT. This app uses the WRITE_SECURE_SETTINGS permission to access a hidden Android API called IWindowManager.</string>

    <string name="source_code_title">Source Code</string>
    <string name="view_source_code">View on GitHub</string>

    <string name="contributors_title">Contributors</string>
    <string name="contributor_avatar_desc">Contributor Profile Photo</string>
    <string name="contributor_github_desc">Contributor GitHub Profile</string>

    <string name="sponsor_title">Support Development</string>
    <string name="sponsor_description">If you like the Pixelify app and want to support its development, you can sponsor or make a donation. Every support means a lot to us!</string>
    <string name="become_sponsor">Become a Sponsor</string>
</resources>