<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:title="@string/settings"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appearrance"
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"/>
            <iiec.ditzdev.pixelify.components.SettingsLayout
                android:id="@+id/btnThemeMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/ui_mode"
                app:subtitle="@string/subtitle_ui_mode"
                app:icon="@drawable/settings_night_sight_24px"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/application_settings"
                android:layout_margin="8sp"
                android:textSize="16sp"
                android:textColor="?attr/colorPrimary"/>
            <iiec.ditzdev.pixelify.components.SettingsSwitch
                android:id="@+id/btnEnableWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/smart_alerts"
                app:subtitle="@string/subtitle_smart_alerts"
                app:icon="@drawable/notifications_24px"/>
            <iiec.ditzdev.pixelify.components.SettingsSwitch
                android:id="@+id/btnEnableLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                app:title="@string/logging"
                app:subtitle="@string/subtitle_logging"
                app:icon="@drawable/list_alt_24px"
                app:checked="true"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>