<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuMore"
        android:title="@string/more_options"
        android:icon="@drawable/ic_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuSettings"
                android:title="@string/string_settings"
                android:icon="@drawable/ic_settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/menuAbout"
                android:title="@string/about_app"
                android:icon="@drawable/info_24px"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>